--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-ext/packaging
-/pkg/
-
 Gemfile.lock
+ext/packaging
+puppet/README.md
+puppet/CHANGELOG.md
+puppet/LICENSE
+puppet/NOTICE
+*.tar.gz
+.ruby-version
